# stt-app

./: .gitignore  README.md  index.html  package.json
.github/workflows/: README.md  ci.yml  release.yml
openspec/changes/add-github-actions-workflows/: design.md  proposal.md  tasks.md
openspec/changes/add-github-actions-workflows/specs/ci-automation/: spec.md
openspec/changes/add-push-to-talk/: design.md  proposal.md  tasks.md
openspec/changes/add-push-to-talk/specs/audio-recording/: spec.md
openspec/changes/add-push-to-talk/specs/hotkey-input/: spec.md
openspec/changes/archive/2025-12-11-add-live-audio-waveform/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-11-add-live-audio-waveform/specs/audio-visualization/: spec.md
openspec/changes/archive/2025-12-11-add-whisper-stt-scaffolding/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-11-add-whisper-stt-scaffolding/specs/audio-recording/: spec.md
openspec/changes/archive/2025-12-11-add-whisper-stt-scaffolding/specs/speech-transcription/: spec.md
openspec/changes/archive/2025-12-12-update-window-appearance/: proposal.md  tasks.md
openspec/changes/archive/2025-12-12-update-window-appearance/specs/window-appearance/: spec.md
openspec/changes/archive/2025-12-13-add-speech-detection-events/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-13-add-speech-detection-events/specs/audio-processing/: spec.md
openspec/changes/archive/2025-12-13-enhance-speech-detection-algorithm/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-13-enhance-speech-detection-algorithm/specs/audio-processing/: spec.md
openspec/changes/archive/2025-12-14-migrate-visualization-processing-to-backend/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-14-migrate-visualization-processing-to-backend/specs/audio-visualization/: spec.md
openspec/changes/archive/2025-12-17-add-windows-audio-backend/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-17-add-windows-audio-backend/specs/audio-recording/: spec.md
openspec/changes/archive/2025-12-17-refactor-whisper-cpp-binaries/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-17-refactor-whisper-cpp-binaries/specs/speech-transcription/: spec.md
openspec/changes/archive/2025-12-18-add-macos-basic-audio/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-18-add-macos-basic-audio/specs/audio-recording/: spec.md
openspec/changes/archive/2025-12-18-add-macos-multi-source-audio/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-18-add-macos-multi-source-audio/specs/audio-recording/: spec.md
openspec/specs/audio-processing/: spec.md
openspec/specs/audio-recording/: spec.md
openspec/specs/audio-visualization/: spec.md
openspec/specs/speech-transcription/: spec.md
openspec/specs/window-appearance/: spec.md
src/: main.ts  styles.css
src-cli/src/: client.rs  main.rs
src-common/src/: types.rs
src-common/src/ipc/: protocol.rs  requests.rs  responses.rs
src-common/src/security/: peer_verify.rs
src-service/: Cargo.toml  build.rs
src-service/src/: audio.rs  audio_loop.rs  main.rs  processor.rs  ptt_controller.rs  state.rs
src-service/src/hotkey/: backend.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-service/src/ipc/: handlers.rs  mod.rs
src-service/src/platform/: backend.rs  mod.rs
src-service/src/platform/linux/: mod.rs  pipewire.rs
src-service/src/platform/macos/: coreaudio.rs  mod.rs  screencapturekit.rs
src-service/src/platform/windows/: mod.rs  wasapi.rs
src-service/src/transcription/: mod.rs  transcribe_state.rs  transcriber.rs  whisper_ffi.rs
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/src/: audio.rs  ipc_client.rs  lib.rs  processor.rs  transcribe.rs  whisper_ffi.rs
src-tauri/src/platform/macos/: coreaudio.rs  mod.rs  screencapturekit.rs
src-tauri/src/platform/windows/: mod.rs  wasapi.rs
