[package]
name = "flowstt"
version = "0.1.0"
description = "FlowSTT - Speech to Text"
authors = ["you"]
edition = "2021"
default-run = "flowstt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flowstt_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking"] }
rustfft = "6.2"
hound = "3.5"

# Windows/macOS: Use libloading for FFI with prebuilt whisper.cpp binaries
[target.'cfg(not(target_os = "linux"))'.dependencies]
libloading = "0.8"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.8"
aec3 = "0.1"  # Pure Rust port of WebRTC AEC3, supports 48kHz
whisper-rs = "0.14"  # Linux uses whisper-rs (builds from source)
